grammar.gen.output
Терминалы не используются в грамматике

   "new"


Грамматика

    0 $accept: program "end of file"

    1 epsilon: %empty

    2 constant: "Bool constant"
    3         | "Number constant"
    4         | "String constant"

    5 variable_decl: type "Identifier" ';'
    6              | variable_decl type "Identifier" ';'

    7 variable: "Identifier"

    8 function_call: "Identifier" '(' expression_list ')'

    9 expression: constant
   10           | variable
   11           | '(' expression ')'
   12           | '!' expression
   13           | expression '<' expression
   14           | expression "operator &&" expression
   15           | expression '+' expression
   16           | expression '-' expression
   17           | expression '*' expression
   18           | expression '/' expression
   19           | function_call

   20 expression_list: epsilon
   21                | expression
   22                | expression_list ',' expression

   23 statement: "System.out.println" '(' expression ')'
   24          | variable '=' expression
   25          | variable '[' expression ']' '=' expression
   26          | "if" '(' expression ')' statement "else" statement
   27          | "while" '(' expression ')' statement
   28          | block

   29 statement_line: error ';'
   30               | statement ';'

   31 statement_list: statement_line
   32               | statement_list statement_line

   33 block: '{' statement_list '}'
   34      | '{' '}'

   35 type: "int" '[' ']'
   36     | "boolean"
   37     | "int"
   38     | "Identifier"

   39 parameter_list: type variable
   40               | parameter_list ',' type variable

   41 method_list: method_declaration
   42            | method_list method_declaration

   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' variable_decl statement_list "return" expression ';' '}'

   44 class_list_non_empty: class_declaration
   45                     | class_list_non_empty class_declaration

   46 class_list: epsilon
   47           | class_list_non_empty

   48 class_declaration: "class" "Identifier" '{' variable_decl method_list '}'
   49                  | "class" "Identifier" "extends" "Identifier" '{' variable_decl method_list '}'

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

   51 program: main_class class_list


Терминальные символы с правилами, в которых они появляются

"end of file" (0) 0
'!' (33) 12
'(' (40) 8 11 23 26 27 43 50
')' (41) 8 11 23 26 27 43 50
'*' (42) 17
'+' (43) 15
',' (44) 22 40
'-' (45) 16
'/' (47) 18
';' (59) 5 6 29 30 43
'<' (60) 13
'=' (61) 24 25
'[' (91) 25 35 50
']' (93) 25 35 50
'{' (123) 33 34 43 48 49 50
'}' (125) 33 34 43 48 49 50
error (256) 29
"Number constant" (258) 3
"String constant" (259) 4
"Bool constant" (260) 2
"Identifier" (261) 5 6 7 8 38 43 48 49 50
"while" (262) 27
"if" (263) 26
"else" (264) 26
"return" (265) 43
"operator &&" (266) 14
"System.out.println" (267) 23
"new" (268)
"public" (269) 43 50
"void" (270) 50
"static" (271) 50
"main" (272) 50
"extends" (273) 49
"int" (274) 35 37
"boolean" (275) 36
"String" (276) 50
"class" (277) 48 49 50


Нетерминальные символы с правилами, в которых они появляются

$accept (38)
    налево: 0
epsilon (39)
    налево: 1, направо: 20 46
constant (40)
    налево: 2 3 4, направо: 9
variable_decl (41)
    налево: 5 6, направо: 6 43 48 49
variable (42)
    налево: 7, направо: 10 24 25 39 40
function_call (43)
    налево: 8, направо: 19
expression (44)
    налево: 9 10 11 12 13 14 15 16 17 18 19, направо:
    11 12 13 14 15 16 17 18 21 22 23 24 25 26 27 43
expression_list (45)
    налево: 20 21 22, направо: 8 22
statement (46)
    налево: 23 24 25 26 27 28, направо: 26 27 30
statement_line (47)
    налево: 29 30, направо: 31 32
statement_list (48)
    налево: 31 32, направо: 32 33 43 50
block (49)
    налево: 33 34, направо: 28
type (50)
    налево: 35 36 37 38, направо: 5 6 39 40 43
parameter_list (51)
    налево: 39 40, направо: 40 43
method_list (52)
    налево: 41 42, направо: 42 48 49
method_declaration (53)
    налево: 43, направо: 41 42
class_list_non_empty (54)
    налево: 44 45, направо: 45 47
class_list (55)
    налево: 46 47, направо: 51
class_declaration (56)
    налево: 48 49, направо: 44 45
main_class (57)
    налево: 50, направо: 51
program (58)
    налево: 51, направо: 0


State 0

    0 $accept: . program "end of file"

    "class"  сдвиг, и переход в состояние 1

    main_class  переход в состояние 2
    program     переход в состояние 3


State 1

   50 main_class: "class" . "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "Identifier"  сдвиг, и переход в состояние 4


State 2

   51 program: main_class . class_list

    "class"  сдвиг, и переход в состояние 5

    $default  вывод с использованием правила 1 (epsilon)

    epsilon               переход в состояние 6
    class_list_non_empty  переход в состояние 7
    class_list            переход в состояние 8
    class_declaration     переход в состояние 9


State 3

    0 $accept: program . "end of file"

    "end of file"  сдвиг, и переход в состояние 10


State 4

   50 main_class: "class" "Identifier" . '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    '{'  сдвиг, и переход в состояние 11


State 5

   48 class_declaration: "class" . "Identifier" '{' variable_decl method_list '}'
   49                  | "class" . "Identifier" "extends" "Identifier" '{' variable_decl method_list '}'

    "Identifier"  сдвиг, и переход в состояние 12


State 6

   46 class_list: epsilon .

    $default  вывод с использованием правила 46 (class_list)


State 7

   45 class_list_non_empty: class_list_non_empty . class_declaration
   47 class_list: class_list_non_empty .

    "class"  сдвиг, и переход в состояние 5

    $default  вывод с использованием правила 47 (class_list)

    class_declaration  переход в состояние 13


State 8

   51 program: main_class class_list .

    $default  вывод с использованием правила 51 (program)


State 9

   44 class_list_non_empty: class_declaration .

    $default  вывод с использованием правила 44 (class_list_non_empty)


State 10

    0 $accept: program "end of file" .

    $default  принять


State 11

   50 main_class: "class" "Identifier" '{' . "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "public"  сдвиг, и переход в состояние 14


State 12

   48 class_declaration: "class" "Identifier" . '{' variable_decl method_list '}'
   49                  | "class" "Identifier" . "extends" "Identifier" '{' variable_decl method_list '}'

    "extends"  сдвиг, и переход в состояние 15
    '{'        сдвиг, и переход в состояние 16


State 13

   45 class_list_non_empty: class_list_non_empty class_declaration .

    $default  вывод с использованием правила 45 (class_list_non_empty)


State 14

   50 main_class: "class" "Identifier" '{' "public" . "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "static"  сдвиг, и переход в состояние 17


State 15

   49 class_declaration: "class" "Identifier" "extends" . "Identifier" '{' variable_decl method_list '}'

    "Identifier"  сдвиг, и переход в состояние 18


State 16

   48 class_declaration: "class" "Identifier" '{' . variable_decl method_list '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    variable_decl  переход в состояние 22
    type           переход в состояние 23


State 17

   50 main_class: "class" "Identifier" '{' "public" "static" . "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "void"  сдвиг, и переход в состояние 24


State 18

   49 class_declaration: "class" "Identifier" "extends" "Identifier" . '{' variable_decl method_list '}'

    '{'  сдвиг, и переход в состояние 25


State 19

   38 type: "Identifier" .

    $default  вывод с использованием правила 38 (type)


State 20

   35 type: "int" . '[' ']'
   37     | "int" .

    '['  сдвиг, и переход в состояние 26

    $default  вывод с использованием правила 37 (type)


State 21

   36 type: "boolean" .

    $default  вывод с использованием правила 36 (type)


State 22

    6 variable_decl: variable_decl . type "Identifier" ';'
   48 class_declaration: "class" "Identifier" '{' variable_decl . method_list '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "public"      сдвиг, и переход в состояние 27
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    type                переход в состояние 28
    method_list         переход в состояние 29
    method_declaration  переход в состояние 30


State 23

    5 variable_decl: type . "Identifier" ';'

    "Identifier"  сдвиг, и переход в состояние 31


State 24

   50 main_class: "class" "Identifier" '{' "public" "static" "void" . "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "main"  сдвиг, и переход в состояние 32


State 25

   49 class_declaration: "class" "Identifier" "extends" "Identifier" '{' . variable_decl method_list '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    variable_decl  переход в состояние 33
    type           переход в состояние 23


State 26

   35 type: "int" '[' . ']'

    ']'  сдвиг, и переход в состояние 34


State 27

   43 method_declaration: "public" . type "Identifier" '(' parameter_list ')' '{' variable_decl statement_list "return" expression ';' '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    type  переход в состояние 35


State 28

    6 variable_decl: variable_decl type . "Identifier" ';'

    "Identifier"  сдвиг, и переход в состояние 36


State 29

   42 method_list: method_list . method_declaration
   48 class_declaration: "class" "Identifier" '{' variable_decl method_list . '}'

    "public"  сдвиг, и переход в состояние 27
    '}'       сдвиг, и переход в состояние 37

    method_declaration  переход в состояние 38


State 30

   41 method_list: method_declaration .

    $default  вывод с использованием правила 41 (method_list)


State 31

    5 variable_decl: type "Identifier" . ';'

    ';'  сдвиг, и переход в состояние 39


State 32

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" . '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    '('  сдвиг, и переход в состояние 40


State 33

    6 variable_decl: variable_decl . type "Identifier" ';'
   49 class_declaration: "class" "Identifier" "extends" "Identifier" '{' variable_decl . method_list '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "public"      сдвиг, и переход в состояние 27
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    type                переход в состояние 28
    method_list         переход в состояние 41
    method_declaration  переход в состояние 30


State 34

   35 type: "int" '[' ']' .

    $default  вывод с использованием правила 35 (type)


State 35

   43 method_declaration: "public" type . "Identifier" '(' parameter_list ')' '{' variable_decl statement_list "return" expression ';' '}'

    "Identifier"  сдвиг, и переход в состояние 42


State 36

    6 variable_decl: variable_decl type "Identifier" . ';'

    ';'  сдвиг, и переход в состояние 43


State 37

   48 class_declaration: "class" "Identifier" '{' variable_decl method_list '}' .

    $default  вывод с использованием правила 48 (class_declaration)


State 38

   42 method_list: method_list method_declaration .

    $default  вывод с использованием правила 42 (method_list)


State 39

    5 variable_decl: type "Identifier" ';' .

    $default  вывод с использованием правила 5 (variable_decl)


State 40

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' . "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    "String"  сдвиг, и переход в состояние 44


State 41

   42 method_list: method_list . method_declaration
   49 class_declaration: "class" "Identifier" "extends" "Identifier" '{' variable_decl method_list . '}'

    "public"  сдвиг, и переход в состояние 27
    '}'       сдвиг, и переход в состояние 45

    method_declaration  переход в состояние 38


State 42

   43 method_declaration: "public" type "Identifier" . '(' parameter_list ')' '{' variable_decl statement_list "return" expression ';' '}'

    '('  сдвиг, и переход в состояние 46


State 43

    6 variable_decl: variable_decl type "Identifier" ';' .

    $default  вывод с использованием правила 6 (variable_decl)


State 44

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" . '[' ']' "Identifier" ')' '{' statement_list '}' '}'

    '['  сдвиг, и переход в состояние 47


State 45

   49 class_declaration: "class" "Identifier" "extends" "Identifier" '{' variable_decl method_list '}' .

    $default  вывод с использованием правила 49 (class_declaration)


State 46

   43 method_declaration: "public" type "Identifier" '(' . parameter_list ')' '{' variable_decl statement_list "return" expression ';' '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    type            переход в состояние 48
    parameter_list  переход в состояние 49


State 47

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' . ']' "Identifier" ')' '{' statement_list '}' '}'

    ']'  сдвиг, и переход в состояние 50


State 48

   39 parameter_list: type . variable

    "Identifier"  сдвиг, и переход в состояние 51

    variable  переход в состояние 52


State 49

   40 parameter_list: parameter_list . ',' type variable
   43 method_declaration: "public" type "Identifier" '(' parameter_list . ')' '{' variable_decl statement_list "return" expression ';' '}'

    ')'  сдвиг, и переход в состояние 53
    ','  сдвиг, и переход в состояние 54


State 50

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' . "Identifier" ')' '{' statement_list '}' '}'

    "Identifier"  сдвиг, и переход в состояние 55


State 51

    7 variable: "Identifier" .

    $default  вывод с использованием правила 7 (variable)


State 52

   39 parameter_list: type variable .

    $default  вывод с использованием правила 39 (parameter_list)


State 53

   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' . '{' variable_decl statement_list "return" expression ';' '}'

    '{'  сдвиг, и переход в состояние 56


State 54

   40 parameter_list: parameter_list ',' . type variable

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    type  переход в состояние 57


State 55

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" . ')' '{' statement_list '}' '}'

    ')'  сдвиг, и переход в состояние 58


State 56

   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' . variable_decl statement_list "return" expression ';' '}'

    "Identifier"  сдвиг, и переход в состояние 19
    "int"         сдвиг, и переход в состояние 20
    "boolean"     сдвиг, и переход в состояние 21

    variable_decl  переход в состояние 59
    type           переход в состояние 23


State 57

   40 parameter_list: parameter_list ',' type . variable

    "Identifier"  сдвиг, и переход в состояние 51

    variable  переход в состояние 60


State 58

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' . '{' statement_list '}' '}'

    '{'  сдвиг, и переход в состояние 61


State 59

    6 variable_decl: variable_decl . type "Identifier" ';'
   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' variable_decl . statement_list "return" expression ';' '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 63
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "System.out.println"  сдвиг, и переход в состояние 66
    "int"                 сдвиг, и переход в состояние 20
    "boolean"             сдвиг, и переход в состояние 21
    '{'                   сдвиг, и переход в состояние 67

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 70
    statement_list  переход в состояние 71
    block           переход в состояние 72
    type            переход в состояние 28


State 60

   40 parameter_list: parameter_list ',' type variable .

    $default  вывод с использованием правила 40 (parameter_list)


State 61

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' . statement_list '}' '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 51
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "System.out.println"  сдвиг, и переход в состояние 66
    '{'                   сдвиг, и переход в состояние 67

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 70
    statement_list  переход в состояние 73
    block           переход в состояние 72


State 62

   29 statement_line: error . ';'

    ';'  сдвиг, и переход в состояние 74


State 63

    7 variable: "Identifier" .
   38 type: "Identifier" .

    "Identifier"  вывод с использованием правила 38 (type)
    $default      вывод с использованием правила 7 (variable)


State 64

   27 statement: "while" . '(' expression ')' statement

    '('  сдвиг, и переход в состояние 75


State 65

   26 statement: "if" . '(' expression ')' statement "else" statement

    '('  сдвиг, и переход в состояние 76


State 66

   23 statement: "System.out.println" . '(' expression ')'

    '('  сдвиг, и переход в состояние 77


State 67

   33 block: '{' . statement_list '}'
   34      | '{' . '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 51
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "System.out.println"  сдвиг, и переход в состояние 66
    '{'                   сдвиг, и переход в состояние 67
    '}'                   сдвиг, и переход в состояние 78

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 70
    statement_list  переход в состояние 79
    block           переход в состояние 72


State 68

   24 statement: variable . '=' expression
   25          | variable . '[' expression ']' '=' expression

    '='  сдвиг, и переход в состояние 80
    '['  сдвиг, и переход в состояние 81


State 69

   30 statement_line: statement . ';'

    ';'  сдвиг, и переход в состояние 82


State 70

   31 statement_list: statement_line .

    $default  вывод с использованием правила 31 (statement_list)


State 71

   32 statement_list: statement_list . statement_line
   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' variable_decl statement_list . "return" expression ';' '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 51
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "return"              сдвиг, и переход в состояние 83
    "System.out.println"  сдвиг, и переход в состояние 66
    '{'                   сдвиг, и переход в состояние 67

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 84
    block           переход в состояние 72


State 72

   28 statement: block .

    $default  вывод с использованием правила 28 (statement)


State 73

   32 statement_list: statement_list . statement_line
   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list . '}' '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 51
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "System.out.println"  сдвиг, и переход в состояние 66
    '{'                   сдвиг, и переход в состояние 67
    '}'                   сдвиг, и переход в состояние 85

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 84
    block           переход в состояние 72


State 74

   29 statement_line: error ';' .

    $default  вывод с использованием правила 29 (statement_line)


State 75

   27 statement: "while" '(' . expression ')' statement

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 95


State 76

   26 statement: "if" '(' . expression ')' statement "else" statement

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 96


State 77

   23 statement: "System.out.println" '(' . expression ')'

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 97


State 78

   34 block: '{' '}' .

    $default  вывод с использованием правила 34 (block)


State 79

   32 statement_list: statement_list . statement_line
   33 block: '{' statement_list . '}'

    error                 сдвиг, и переход в состояние 62
    "Identifier"          сдвиг, и переход в состояние 51
    "while"               сдвиг, и переход в состояние 64
    "if"                  сдвиг, и переход в состояние 65
    "System.out.println"  сдвиг, и переход в состояние 66
    '{'                   сдвиг, и переход в состояние 67
    '}'                   сдвиг, и переход в состояние 98

    variable        переход в состояние 68
    statement       переход в состояние 69
    statement_line  переход в состояние 84
    block           переход в состояние 72


State 80

   24 statement: variable '=' . expression

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 99


State 81

   25 statement: variable '[' . expression ']' '=' expression

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 100


State 82

   30 statement_line: statement ';' .

    $default  вывод с использованием правила 30 (statement_line)


State 83

   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' variable_decl statement_list "return" . expression ';' '}'

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 101


State 84

   32 statement_list: statement_list statement_line .

    $default  вывод с использованием правила 32 (statement_list)


State 85

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' . '}'

    '}'  сдвиг, и переход в состояние 102


State 86

    3 constant: "Number constant" .

    $default  вывод с использованием правила 3 (constant)


State 87

    4 constant: "String constant" .

    $default  вывод с использованием правила 4 (constant)


State 88

    2 constant: "Bool constant" .

    $default  вывод с использованием правила 2 (constant)


State 89

    7 variable: "Identifier" .
    8 function_call: "Identifier" . '(' expression_list ')'

    '('  сдвиг, и переход в состояние 103

    $default  вывод с использованием правила 7 (variable)


State 90

   12 expression: '!' . expression

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 104


State 91

   11 expression: '(' . expression ')'

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    constant       переход в состояние 92
    variable       переход в состояние 93
    function_call  переход в состояние 94
    expression     переход в состояние 105


State 92

    9 expression: constant .

    $default  вывод с использованием правила 9 (expression)


State 93

   10 expression: variable .

    $default  вывод с использованием правила 10 (expression)


State 94

   19 expression: function_call .

    $default  вывод с использованием правила 19 (expression)


State 95

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   27 statement: "while" '(' expression . ')' statement

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111
    ')'            сдвиг, и переход в состояние 112


State 96

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   26 statement: "if" '(' expression . ')' statement "else" statement

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111
    ')'            сдвиг, и переход в состояние 113


State 97

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   23 statement: "System.out.println" '(' expression . ')'

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111
    ')'            сдвиг, и переход в состояние 114


State 98

   33 block: '{' statement_list '}' .

    $default  вывод с использованием правила 33 (block)


State 99

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   24 statement: variable '=' expression .

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111

    $default  вывод с использованием правила 24 (statement)


State 100

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   25 statement: variable '[' expression . ']' '=' expression

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111
    ']'            сдвиг, и переход в состояние 115


State 101

   13 expression: expression . '<' expression
   14           | expression . "operator &&" expression
   15           | expression . '+' expression
   16           | expression . '-' expression
   17           | expression . '*' expression
   18           | expression . '/' expression
   43 method_declaration: "public" type "Identifier" '(' parameter_list ')' '{' variable_decl statement_list "return" expression . ';' '}'

    "operator &&"  сдвиг, и переход в состояние 106
    '<'            сдвиг, и переход в состояние 107
    '+'            сдвиг, и переход в состояние 108
    '-'            сдвиг, и переход в состояние 109
    '*'            сдвиг, и переход в состояние 110
    '/'            сдвиг, и переход в состояние 111
    ';'            сдвиг, и переход в состояние 116


State 102

   50 main_class: "class" "Identifier" '{' "public" "static" "void" "main" '(' "String" '[' ']' "Identifier" ')' '{' statement_list '}' '}' .

    $default  вывод с использованием правила 50 (main_class)


State 103

    8 function_call: "Identifier" '(' . expression_list ')'

    "Number constant"  сдвиг, и переход в состояние 86
    "String constant"  сдвиг, и переход в состояние 87
    "Bool constant"    сдвиг, и переход в состояние 88
    "Identifier"       сдвиг, и переход в состояние 89
    '!'                сдвиг, и переход в состояние 90
    '('                сдвиг, и переход в состояние 91

    $default  вывод с использованием правила 1 (epsilon)
